<resources>
    <string name="app_name">SkinWise</string>
    <string name="login">Login</string>
    <string name="nama">Nama</string>
    <string name="password">password</string>
    <string name="selamat_datang">Selamat datang</string>
    <string name="login_description">Ayo masuk ke akunmu terlebih dahulu</string>
    <string name="email">Email</string>
    <string name="signup_description">Daftarkan akunmu dulu yuk!</string>
    <string name="signupCTA">Belum mempunyai akun? daftar</string>
    <string name="signupCTALink">disini</string>
    <string name="sign_up">Sign Up</string>
    <string name="loginCTA">Sudah mempunyai akun? login</string>
    <string name="loginCTALink">disini</string>
    <string name="search_article_hint">Masukan nama penyakit</string>
    <string name="search_doctor_hint">Masukan nama dokter</string>
    <string name="source">source</string>
    <string name="article">Artikel</string>
    <string name="article_title">Judul Artikel</string>
    <string name="article_writer">penulis</string>
    <string name="article_date">tanggal</string>

    <string name="welcomeTitle">Selamat Datang di SkinWise</string>
    <string name="welcomeDesc">Aplikasi mobile pertama di Indonesia yang menyediakan layanan kesehatan kulit!</string>
    <string name="greetingProfile">Hai, Selamat datang  🎉</string>
    <string name="nameProfile">Owner Loly</string>

    <string name="searchbarSearch">Ketikan nama penyakit atau rumah sakit</string>

    <string name="homearticlesessionTittle">Artikel Terkait</string>
    <string name="homearticlesessionSeeall">lihat semua</string>
    <string name="filterArticle">Vitiligo</string>
    <string name="tittleArticle">Apakah Vitiligo Bisa Disembuhkan? Ini Faktanya</string>
    <string name="categoryArticle">Vitiligo</string>
    <string name="dateArticle">25 Juni 2023</string>
    <string name="tittleHospitalSection">Rumah sakit</string>
    <string name="title">RS UNAIR</string>
    <string name="streetHospital">Jl. Teluk Nibung Utara No 39 Surabaya</string>
    <string name="tittleScanningSection">History Scanning</string>
    <string name="info">Info</string>
    <string name="article_deskripsi">deskripsi</string>
    <string name="accountSetting">Pengaturan Akun</string>
    <string name="personalinformation">Informasi Pribadi</string>
    <string name="notification">Notifikasi</string>
    <string name="articlefav">Artikel Favorit</string>
    <string name="hospitalfav">Rumah Sakit Favorit</string>
    <string name="managescan">History Scan</string>
    <string name="helpandsupport">Bantuan dan Dukungan</string>
    <string name="privasi">Kebijakan Privasi</string>
    <string name="termcondition">Syarat dan Ketentuan</string>
    <string name="faq">FAQ dan Bantuan</string>
    <string name="logout">Keluar</string>
    <string name="editprofile">Edit Profile</string>
    <string name="editphoto">Edit Foto Profil</string>
    <string name="nameuser">Ibu Owner Loli</string>
    <string name="hospital_toolbar">Rumah Sakit</string>
    <string name="hospital_name">Nama rumah sakit</string>
    <string name="hospital_address">alamat rumah sakit</string>
    <string name="open_hours">24 jam</string>
    <string name="rate">rate</string>
    <string name="message_hint">Ketikkan sesuatu...</string>
    <string name="chat">Chat</string>


    <string name="typedisease">Jenis penyakit :</string>
    <string name="disease">Vitiligo 90%</string>
    <string name="descriptiondiseasesection">Deskripsi penyakit</string>
    <string name="descriptiondisease">Vitiligo adalah kelainan kulit pigmentasi yang disebabkan karena tidak adanya sel pigmen dari epidermis yang menghasilkan makula putih dan bercak pada bagian tubuh. Kondisi ini berkaitan dengan gangguan autoimun, kelainan tiroid.</string>
    <string name="factortittle">Faktor penyebab</string>
    <string name="factordesc">• Kelainan genetik yang diturunkan\\n• Penyakit autoimun, seperti penyakit Graves, penyakit Hashimoto, atau diabetes tipe 1\\n• Paparan sinar matahari (radiasi ultraviolet)\\n• Paparan bahan kimia</string>
    <string name="treatment">Pengobatan</string>
    <string name="treatmentdetail">Vitiligo adalah penyebab yang umum dari depigmentasi yang muncul segala umur dan jenis kelamin. Berbagai jenis obat topikal dan sistemik, terapi bedah dapat digunakan untuk pengobatan vitiligo. Untuk pengobatan topikal seperti kortikosteroid, inhibitor kalsineurin, dan analog vitamin-D. Untuk pengobatan lainnya dengan fototerapi, dimana pengobatan ini sangat efektif dengan cara menginduksi repigmentasi pada tahap awal. Excimer Laser dapat juga digunakan untuk pengobatan vitiligo dimana penyakit ini sangat resisten terhadap sebagian besarpengobatan, seperti kombinasi antara acrolimus dan kortikosteroid sistemik. Untuk terapi bisa menggunakan terapi penghambat Afamelanotide.</string>
    <string name="recomendationArticle">Artikel Terkait</string>
    <string name="HospitalSection">Rumah Sakit Sekitar Anda</string>
    <string name="image_classifier_failed">Gagal Classifier</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="diseasename">Penyakit Vitiligo</string>
    <string name="datescan">Discan pada tanggal : 24/02/2024</string>
    <string name="nama_dokter">Nama dokter</string>
    <string name="Status_dokter">status dokter</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="timestamp">timestamp</string>
    <string name="no_disease_detected">tidak ada penyakit terdeteksi</string>
    <string name="try_again">coba lagi</string>
    <string name="confirmExit">Konfirmasi Keluar</string>
    <string name="exit">Apakah anda yakin ingin keluar?</string>
    <string name="yes">Ya</string>
    <string name="no">Tidak</string>
    <string name="stayLoggedIn">Tetap Login</string>
    <string name="take_photo">Ambil Foto</string>
    <string name="import_from_gallery">Import dari Galeri</string>
    <string name="ingredient_not_recognized">Pindai Kulitmu dan Ketahui Penyakit Anda</string>
    <string name="ingredient_not_recognized_desc">Kami punya fitur pemindaian foto kulit yang memberi deskripsi penyakit kulit dan tips pencegahan.</string>
    <string name="permission_camera_not_granted">Permssion Denied</string>
    <string name="import_gallery">Ambil dari Galeri</string>
    <string name="detecting">Mendeteksi</string>
    <string name="open_camera_failed">Buka Kamera</string>
    <string name="detection_failed">Gagal Mendeteksi</string>
    <string name="simpan">Simpan</string>
    <string name="masukkan_kata_sandi_baru">Masukkan kata sandi baru</string>
    <string name="masukkan_kata_sandi_lama">Masukkan kata sandi lama</string>


    <string name="no_media_selected">Tidak ada gambar yang dipilih</string>
    <string name="infeksi_kulit">Infeksi Kulit</string>
    <string name="kota">Kota,</string>
    <string name="provinsi">Provinsi</string>
    <string name="dermatologist_available">Dermatologist Available</string>
    <string name="dermatologist_unavailable">Dermatologist Unavailable</string>
    <string name="info_tambahan">Informasi tambahan :</string>
    <string name="url_info_tambahan">Url additional info</string>
    <string name="kontak_rumah_sakit">kontak rumah sakit</string>
    <string name="skip">Kembali</string>
    <string name="next">Selanjutnya</string>
    <string name="finish">Mulai Sekarang</string>
    <string name="title_onboarding">"Selamat datang di "</string>
    <string name="title_onboarding2">SkinWise</string>
    <string name="description_onboarding">Aplikasi mobile pertama di Indonesia yang menyediakan layanan kesehatan kulit.</string>
    <string name="description_onboarding2">Kami punya fitur pemindaian foto kulit yang memberi deskripsi penyakit kulit dan tips pencegahan.</string>
    <string name="title_onboarding3">Pindai kulitmu dan</string>
    <string name="title_onboarding4">ketahui</string>
    <string name="title_onboarding5">Penyakit Kamu!</string>
    <string name="title_onboarding6">Konsultasi</string>
    <string name="title_onboarding7">dengan Dokter</string>
    <string name="title_onboarding8">terkait Penyakit Kamu!</string>
    <string name="description_onboarding3">Tidak perlu khawatir untuk menangani penyakit kulit yang anda alami, konsultasi dengan dokter kepercayaan kami</string>
    <string name="history">Riwayat Scan Penyakit</string>
</resources>