<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/white">

    <View
        android:id="@+id/viewBackground"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:backgroundTint="@color/blue_primary"
        android:foregroundTint="@color/blue_primary"
        android:background="@color/blue_primary" />
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="180dp"
        android:src="@drawable/texture_home"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/roundedSquareBlue"
        android:layout_width="wrap_content"
        android:layout_height="24dp"
        android:src="@drawable/rounded_square_blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:backgroundTint="@color/blue_primary"
        android:scaleType="fitXY"
        app:layout_constraintTop_toBottomOf="@+id/viewBackground" />


    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/mainProfile"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="40dp"
        android:src="@drawable/profile"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/layoutProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="@+id/mainProfile"
        app:layout_constraintStart_toEndOf="@+id/mainProfile"
        app:layout_constraintTop_toTopOf="@+id/mainProfile"
        app:layout_constraintVertical_bias="0.583">

        <TextView
            android:id="@+id/greetingProfile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter_regular"
            android:text="@string/greetingProfile"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/nameProfile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:fontFamily="@font/inter_bold"
            android:text="@string/nameProfile"
            android:textColor="@color/white"
            android:textSize="18sp" />
    </LinearLayout>

    <ImageButton
        android:id="@+id/editProfileBtn"
        android:layout_width="26dp"
        android:layout_height="26dp"
        app:tint="@color/white"
        android:src="@drawable/baseline_edit_square_24"
        app:layout_constraintBottom_toBottomOf="@+id/layoutProfile"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="24dp"
        android:background="@color/blue_primary"
        app:layout_constraintTop_toTopOf="@+id/layoutProfile" />


    <TextView
        android:id="@+id/accountSetting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginStart="24dp"
        android:fontFamily="@font/inter_regular"
        android:text="@string/accountSetting"
        android:textColor="@color/gray_500"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mainProfile" />

    <com.google.android.material.divider.MaterialDivider
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="4dp"
        android:layout_marginHorizontal="24dp"
        app:dividerColor="@color/gray_300"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/accountSetting" />

    <TextView
        android:id="@+id/personalinformation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/inter_regular"
        android:text="@string/personalinformation"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:layout_marginStart="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider" />

    <ImageView
        android:id="@+id/nextpersonalinformation"
        android:layout_width="22dp"
        android:layout_height="22dp"
        android:src="@drawable/baseline_navigate_next_24"
        app:layout_constraintBottom_toBottomOf="@+id/personalinformation"
        android:layout_marginEnd="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/personalinformation" />

    <TextView
        android:id="@+id/notification"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/inter_regular"
        android:text="@string/notification"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:layout_marginStart="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/personalinformation" />

    <ImageView
        android:id="@+id/nextnotification"
        android:layout_width="22dp"
        android:layout_height="22dp"
        android:src="@drawable/baseline_navigate_next_24"
        app:layout_constraintBottom_toBottomOf="@+id/notification"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="24dp"
        app:layout_constraintTop_toTopOf="@+id/notification" />

    <TextView
        android:id="@+id/articlefav"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/inter_regular"
        android:text="@string/articlefav"
        android:textColor="@color/black"
        android:layout_marginStart="24dp"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/notification" />

    <ImageButton
        android:id="@+id/nextarticlefav"
        android:layout_width="22dp"
        android:layout_height="22dp"
        android:layout_marginEnd="24dp"
        android:background="@color/white"
        android:src="@drawable/baseline_navigate_next_24"
        app:layout_constraintBottom_toBottomOf="@+id/articlefav"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/articlefav"
        android:contentDescription="Artikel Favorite" />

    <TextView
        android:id="@+id/hospitalfav"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/inter_regular"
        android:text="@string/hospitalfav"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:layout_marginStart="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/articlefav" />

    <ImageButton
        android:id="@+id/nexthospitalfav"
        android:layout_width="22dp"
        android:layout_height="22dp"
        android:src="@drawable/baseline_navigate_next_24"
        android:layout_marginEnd="24dp"
        android:background="@color/white"
        android:backgroundTint="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/hospitalfav"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/hospitalfav" />

    <TextView
        android:id="@+id/managescan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/inter_regular"
        android:text="@string/managescan"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:layout_marginStart="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hospitalfav" />

    <ImageView
        android:id="@+id/nextmanagescan"
        android:layout_width="22dp"
        android:layout_height="22dp"
        android:layout_marginEnd="24dp"
        android:src="@drawable/baseline_navigate_next_24"
        app:layout_constraintBottom_toBottomOf="@+id/managescan"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/managescan" />

    <TextView
        android:id="@+id/helpandsupport"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/inter_regular"
        android:text="@string/helpandsupport"
        android:textColor="@color/gray_500"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/managescan" />

    <com.google.android.material.divider.MaterialDivider
        android:id="@+id/divider2"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="4dp"
        android:layout_marginHorizontal="24dp"
        app:dividerColor="@color/gray_300"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/helpandsupport" />

    <TextView
        android:id="@+id/privasi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/inter_regular"
        android:text="@string/privasi"
        android:textColor="@color/black"
        android:layout_marginStart="24dp"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider2" />

    <ImageView
        android:id="@+id/nextprivasi"
        android:layout_width="22dp"
        android:layout_height="22dp"
        android:layout_marginEnd="24dp"
        android:src="@drawable/baseline_navigate_next_24"
        app:layout_constraintBottom_toBottomOf="@+id/privasi"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/privasi" />

    <TextView
        android:id="@+id/termcondition"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/inter_regular"
        android:text="@string/termcondition"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:layout_marginStart="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/privasi" />

    <ImageView
        android:id="@+id/nexttermcondition"
        android:layout_width="22dp"
        android:layout_height="22dp"
        android:layout_marginEnd="24dp"
        android:src="@drawable/baseline_navigate_next_24"
        app:layout_constraintBottom_toBottomOf="@+id/termcondition"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/termcondition" />

    <TextView
        android:id="@+id/faq"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/inter_regular"
        android:text="@string/faq"
        android:textColor="@color/black"
        android:layout_marginStart="24dp"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/termcondition" />

    <ImageView
        android:id="@+id/nextfaq"
        android:layout_width="22dp"
        android:layout_height="22dp"
        android:layout_marginEnd="24dp"
        android:src="@drawable/baseline_navigate_next_24"
        app:layout_constraintBottom_toBottomOf="@+id/faq"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/faq" />

    <Button
        android:id="@+id/filledTonalButton"
        style="@style/Widget.Material3.Button.TonalButton"
        android:layout_width="match_parent"
        app:cornerRadius="12dp"
        android:layout_height="52dp"
        android:text="@string/logout"
        app:backgroundTint="#FFEBEE"
        android:textColor="#F44336"
        android:layout_marginTop="28dp"
        android:layout_marginHorizontal="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/faq" />
</androidx.constraintlayout.widget.ConstraintLayout>