<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.welcome.OnboardingFragment1"
    android:padding="24dp">


    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/image_onboarding"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_centerHorizontal="true"
        android:layout_margin="30dp"
        android:scaleType="centerCrop"
        app:lottie_rawRes="@raw/hello"
        app:lottie_loop="true"
        app:lottie_autoPlay="true" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/text_onboarding_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/image_onboarding"
        android:text="@string/title_onboarding"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:fontFamily="@font/inter_semi_bold"
        android:textAlignment="textStart"
        android:layout_marginBottom="2dp"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/text_onboarding_title2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_onboarding_title"
        android:text="@string/title_onboarding2"
        android:textStyle="bold"
        android:textColor="@color/blue_primary"
        android:textSize="28sp"
        android:fontFamily="@font/inter_bold"
        android:textAlignment="textStart"
        android:layout_marginBottom="28dp"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/text_onboarding_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/inter_medium"
        android:layout_below="@id/text_onboarding_title2"
        android:text="@string/description_onboarding"
        android:textSize="16sp"
        android:textColor="@color/gray_500"
        android:textAlignment="textStart"
        android:layout_marginBottom="30dp"/>



</RelativeLayout>
